# Advent-of-Utils

./: Cargo.toml  LICENSE  README.md
aou-cli/: Cargo.toml
aou-cli/src/: input.rs  lib.rs  loader.rs  main.rs  runner.rs  time.rs
aou-cli/src/adder/: input_control.rs  mod.rs
aou-cli/src/config/: mod.rs
aou-cli/src/error/: database.rs  mod.rs  solution.rs
aou-cli/src/loader/: ffi.rs  mod.rs
aou-cli/src/runner/: executor.rs  metrics.rs  mod.rs
aou-cli/src/types/: mod.rs  result.rs  time.rs
aou-cli/src/types/db/: mod.rs  tables.rs
aou-core/: Cargo.toml
aou-lib/: Cargo.toml
aou-lib/src/: lib.rs  parser.rs
aou-macro/: Cargo.toml
aou-macro/src/: lib.rs
examples/template/: dayXX.rs  lib.rs
examples/year_example/: day01.rs  day02.rs  main.rs
src/: aoc_helper.rs  error.rs  input.rs  lib.rs  options.rs  parser.rs  solution.rs  time.rs  types.rs
src/error/: database.rs  input.rs  loading.rs  mod.rs  solution.rs
src/types/: input.rs  mod.rs  options.rs  parts.rs  result.rs
src/types/db/: mod.rs  tables.rs
src/types/display/: mod.rs  old_table.rs  table.rs
