[package]
name = "advent-of-utils"
version = "0.2.3"
edition = "2021"
readme = "./README.md"
license = "MIT"
description = "CLI and library to organise and run Advent of Code puzzles"
repository = "https://github.com/Itron-al-Lenn/Advent-of-Utils"

[[example]]
name = "year_example"
crate-type = ["cdylib"]
path = "examples/year_example/lib.rs"

[[example]]
name = "template"
crate-type = ["cdylib"]
path = "examples/template/lib.rs"

[dependencies]
advent-of-utils-macros = { version = "^0.1.0", path = "./aou-macro/" }

[workspace]
resolver = "2"
members = ["aou-cli", "aou-macro"]
