[package]
name = "advent-of-utils-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "CLI for the Advent of Utils library"
repository = "https://github.com/Itron-al-Lenn/Advent-of-Utils"

[[bin]]
name = "aou"

[dependencies]
advent-of-utils = { version = "0.2.0", path = ".." }
chrono = "0.4.38"
reqwest = { version = "0.12.9", features = ["cookies", "blocking"] }
thiserror = "2.0.3"
libloading = "0.8.6"
directories = "5.0.1"
r2d2 = "0.8.10"
r2d2_sqlite = "0.25.0"
clap = { version = "4.5.21", features = ["derive"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
tempfile = "3.14.0"
